--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <img src="logo.png" width="50%" height="50%">
+            <img src="logo.png" width="50px" height="50px">
             <a href="#" class="text-2xl font-bold text-blue-600">Nama Organisasi</a>
             <div class="space-x-4">
                 <a href="#beranda" class="text-gray-600 hover:text-blue-600 transition duration-300">Beranda</a>
