--- a/index.html
+++ b/index.html
@@ -27,13 +27,28 @@
         .section-subtitle {
             @apply text-lg text-gray-600 mb-12 text-center max-w-2xl mx-auto;
         }
+
+        .logo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background-color: #007bff; /* Warna latar logo */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+            font-family: Arial, sans-serif;
+        }
+
     </style>
 </head>
 <body class="bg-gray-50">
 
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <img src="logo.png" width="50px" height="50px">
+            <img src="logo.png" width="5px" height="5px" class="logo">
             <a href="#" class="text-2xl font-bold text-blue-600">Nama Organisasi</a>
             <div class="space-x-4">
                 <a href="#beranda" class="text-gray-600 hover:text-blue-600 transition duration-300">Beranda</a>
