--- a/index.html
+++ b/index.html
@@ -32,14 +32,9 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            background-color: #007bff; /* Warna latar logo */
             display: flex;
             justify-content: center;
-            align-items: center;
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            font-family: Arial, sans-serif;
+            align-items: left;
         }
 
     </style>
