--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             height: 150px;
             border-radius: 50%;
             display: flex;
-            justify-content: center;
+            justify-content: flex;
             align-items: left;
         }
 
