--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         }
 
         .logo {
-            width: 150px;
-            height: 150px;
+            width: 15px;
+            height: 15px;
             border-radius: 50%;
             display: flex;
-            justify-content: flex;
             align-items: left;
         }
 
@@ -43,7 +42,7 @@
 
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <img src="logo.png" width="5px" height="5px" class="logo">
+            <img src="logo.png" class="logo">
             <a href="#" class="text-2xl font-bold text-blue-600">Nama Organisasi</a>
             <div class="space-x-4">
                 <a href="#beranda" class="text-gray-600 hover:text-blue-600 transition duration-300">Beranda</a>
