--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             height: 15px;
             border-radius: 50%;
             display: flex;
-            align-items: left;
+            align-items: center;
         }
 
     </style>
