--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <img src="logo.png" class="logo">
-            <a href="#" class="text-2xl font-bold text-blue-600">KlubFisika 13 Yogyakarta</a>
+            <a href="#" class="text-2xl font-bold text-blue-600 align-items-left">KlubFisika 13 Yogyakarta</a>
             <div class="space-x-4">
                 <a href="#beranda" class="text-gray-600 hover:text-blue-600 transition duration-300">Beranda</a>
                 <a href="#tentang" class="text-gray-600 hover:text-blue-600 transition duration-300">Tentang Kami</a>
