--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
         .Judul {
             text:2xl;
-            font:bold;
-            text:blue-600; 
+            color:blue;
+            text-decoration:blue-600; 
             align-items:left;
         }
     </style>
