--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .Judul {
             text:2xl;
             color:blue;
-            text-decoration:blue-600; 
+            text-decoration:blue-600, bold; 
             align-items:left;
         }
     </style>
