--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-3">
-                <img src="logo.jpg" alt="Logo KlubFisika 13 Yogyakarta" class="h-10 w-10 rounded-full object-cover"> <span class="text-xl font-bold text-blue-600">KlubFisika 13 Yogyakarta</span>
+                <img src="logo.png" alt="Logo KlubFisika 13 Yogyakarta" class="h-10 w-10 rounded-full object-cover"> <span class="text-xl font-bold text-blue-600">KlubFisika 13 Yogyakarta</span>
             </a>
             <div class="space-x-4">
                 <a href="#beranda" class="text-gray-600 hover:text-blue-600 transition duration-300">Beranda</a>
