--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
             </div>
              <div class="mt-12 text-center text-gray-700">
                 <p class="text-lg font-semibold">Sekretariat KlubFisika 13 Yogyakarta:</p>
-                <p>Jl. Fisika No. 13, Yogyakarta, Kode Pos 55221</p>
-                <p class="mt-2"><span class="font-semibold">Email:</span> info@klubfisika13yk.org | <span class="font-semibold">Telepon/WA:</span> 0812-3456-7890</p>
+                <p>Karangjati Indah, Gendeng, Bangunjiwo, Kasihan, Bantul Regency, Special Region of Yogyakarta 55184</p>
+                <p class="mt-2"><span class="font-semibold">Email:</span> info@klubfisika.or.id | <span class="font-semibold">Telepon/WA:</span> 0896-5469-7422</p>
             </div>
         </div>
     </section>
 
     <footer class="bg-gray-800 text-gray-300 py-12">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; <span id="tahun"></span> KlubFisika 13 Yogyakarta. Semua Hak Dilindungi.</p>
+            <p>&copy; <span id="tahun"></span>KlubFisika 13 Yogyakarta. Semua Hak Dilindungi.</p>
             <div class="mt-4 space-x-4">
                 <a href="#" class="hover:text-white transition duration-300">Facebook</a>
                 <a href="#" class="hover:text-white transition duration-300">Instagram</a>
