--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p class="text-lg mb-12 text-center max-w-2xl mx-auto opacity-90">Dengarkan pengalaman dari mereka yang telah bergabung dan merasakan manfaat dari KlubFisika 13 Yogyakarta.</p>
             <div class="bg-white bg-opacity-20 p-8 rounded-lg shadow-xl max-w-2xl mx-auto">
                 <p class="text-xl italic mb-4">"Bergabung dengan KlubFisika 13 Yogyakarta membuka wawasan saya tentang fisika lebih dalam. Diskusi dan eksperimennya sangat menarik!"</p>
-                <p class="font-semibold text-right">- Nama Anggota Klub</p>
+                <p class="font-semibold text-right">- Ketua KF-13</p>
             </div>
         </div>
     </section>
@@ -133,7 +133,7 @@
 
     <footer class="bg-gray-800 text-gray-300 py-12">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; <span id="tahun"></span>KlubFisika 13 Yogyakarta. Semua Hak Dilindungi.</p>
+            <p>&copy;<span id="tahun"></span> KlubFisika 13 Yogyakarta. Semua Hak Dilindungi.</p>
             <div class="mt-4 space-x-4">
                 <a href="#" class="hover:text-white transition duration-300">Facebook</a>
                 <a href="#" class="hover:text-white transition duration-300">Instagram</a>
