--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <section class="py-20 bg-blue-600 text-white">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold mb-4 text-center">Apa Kata Anggota Kami?</h2>
+            <h2 class="text-3xl font-bold mb-4 text-center">Apa Kata Ketua Kami?</h2>
             <p class="text-lg mb-12 text-center max-w-2xl mx-auto opacity-90">Dengarkan pengalaman dari mereka yang telah bergabung dan merasakan manfaat dari KlubFisika 13 Yogyakarta.</p>
             <div class="bg-white bg-opacity-20 p-8 rounded-lg shadow-xl max-w-2xl mx-auto">
                 <p class="text-xl italic mb-4">"Bergabung dengan KlubFisika 13 Yogyakarta membuka wawasan saya tentang fisika lebih dalam. Diskusi dan eksperimennya sangat menarik!"</p>
