--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="section-subtitle">Kenali lebih dekat visi, misi, dan semangat kami dalam memajukan pemahaman fisika di Yogyakarta.</p>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <img src="https://placehold.co/600x400/e2e8f0/333333?text=Kegiatan+Klub+Fisika" alt="Kegiatan Klub Fisika" class="rounded-lg shadow-xl w-full">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfBCHhiGdEywBlnAV0ZfSoblEyPU0SWXM1sA&s" alt="Kegiatan Klub Fisika" class="rounded-lg shadow-xl w-full">
                 </div>
                 <div class="text-gray-700 text-lg">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-3">Misi Kami</h3>
